[workspace]
default-members = ['node/*', 'runtime/redefi']
members = ['node/*', 'pallets/*', 'primitives/*', 'runtime/redefi']
package.edition = "2021"
package.version = "1.9.0"
resolver = "2"

[profile.release]
# Runtime requires unwinding
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 3

[profile.integration-tests]
debug-assertions = true
inherits = "release"

[patch.crates-io]
ss58-registry = { git = "https://github.com/ReDeFi-Blockchain/ss58-registry.git", branch = "parachain" }

[workspace.dependencies]
# Redefi
evm-coder = { version = "0.4.3", default-features = false }
pallet-balances-adapter = { path = "pallets/balances-adapter", default-features = false }
pallet-evm-assets = { default-features = false, path = "pallets/evm-assets" }
pallet-evm-coder-substrate = { default-features = false, path = "pallets/evm-coder-substrate" }
pallet-evm-transaction-payment = { path = "pallets/evm-transaction-payment", default-features = false }
pallet-evm-contract-helpers = { path = "pallets/evm-contract-helpers", default-features = false }
precompile-utils-macro = { path = "runtime/common/ethereum/precompiles/utils/macro" }
uc-rpc = { path = "client/rpc" }
up-common = { path = "primitives/common", default-features = false }
up-data-structs = { path = "primitives/data-structs", default-features = false }

# Redefi: Runtimes
redefi-runtime = { path = "runtime/redefi" }

# Unique
up-sponsorship = { default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "polkadot-v1.9.0" }

# Frontier (Unique patches over the Parity version)
fc-api = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-consensus = { git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-db = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-mapping-sync = { git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fc-rpc-core = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-self-contained = { default-features = false, features = [
	"serde",
], git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
fp-storage = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
pallet-base-fee = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
pallet-ethereum = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
pallet-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-v1.14.0" }

# Parity
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.6.5" }
cumulus-client-cli = "0.15.0"
cumulus-client-collator = "0.15.0"
cumulus-client-consensus-aura = "0.15.0"
cumulus-client-consensus-common = "0.15.0"
cumulus-client-consensus-proposer = "0.14.0"
cumulus-client-network = "0.15.0"
cumulus-client-parachain-inherent = { default-features = false, version = "0.9.0" }
cumulus-client-service = "0.15.0"
cumulus-pallet-aura-ext = { default-features = false, version = "0.15.0" }
cumulus-pallet-dmp-queue = { default-features = false, version = "0.15.0" }
cumulus-pallet-parachain-system = { default-features = false, version = "0.15.0" }
cumulus-pallet-xcm = { default-features = false, version = "0.15.0" }
cumulus-pallet-xcmp-queue = { default-features = false, version = "0.15.0" }
cumulus-primitives-aura = { default-features = false, version = "0.14.0" }
cumulus-primitives-core = { default-features = false, version = "0.14.0" }
cumulus-primitives-timestamp = { default-features = false, version = "0.14.0" }
cumulus-primitives-utility = { default-features = false, version = "0.15.0" }
cumulus-relay-chain-inprocess-interface = "0.15.0"
cumulus-relay-chain-interface = "0.15.0"
cumulus-relay-chain-minimal-node = "0.15.0"
cumulus-test-relay-sproof-builder = "0.14.0"
frame-executive = { default-features = false, version = "36.0.0" }
frame-support = { default-features = false, version = "36.0.0" }
frame-system = { default-features = false, version = "36.0.0" }
frame-system-rpc-runtime-api = { default-features = false, version = "33.0.0" }
pallet-aura = { default-features = false, version = "35.0.0" }
pallet-authorship = { default-features = false, version = "36.0.0" }
pallet-balances = { default-features = false, version = "37.0.0" }
pallet-collective = { default-features = false, version = "36.0.0" }
pallet-democracy = { default-features = false, version = "36.0.0" }
pallet-membership = { default-features = false, version = "36.0.0" }
pallet-message-queue = { default-features = false, version = "39.0.0" }
pallet-preimage = { default-features = false, version = "36.0.0" }
pallet-ranked-collective = { default-features = false, version = "36.0.0" }
pallet-referenda = { default-features = false, version = "36.0.0" }
pallet-session = { default-features = false, version = "36.0.0" }
pallet-sudo = { default-features = false, version = "36.0.0" }
pallet-timestamp = { default-features = false, version = "35.0.0" }
pallet-transaction-payment = { default-features = false, version = "36.0.0" }
pallet-transaction-payment-rpc = "38.0.0"
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "36.0.0" }
pallet-treasury = { default-features = false, version = "35.0.0" }
pallet-utility = { default-features = false, version = "36.0.0" }
pallet-xcm = { default-features = false, version = "15.0.0" }
parity-scale-codec = { version = "3.6.5", features = ["derive"], default-features = false }
polkadot-cli = "15.0.0"
polkadot-parachain-primitives = { default-features = false, version = "13.0.0" }
polkadot-primitives = "14.0.0"
polkadot-runtime-common = { default-features = false, version = "15.0.0" }
polkadot-service = "15.0.0"
sc-basic-authorship = "0.42.0"
sc-chain-spec = "35.0.0"
sc-cli = "0.44.0"
sc-client-api = "35.1.0"
sc-consensus = "0.41.0"
sc-consensus-manual-seal = "0.43.0"
sc-executor = "0.39.0"
sc-network = "0.42.0"
sc-network-sync = "0.41.0"
sc-rpc = "37.0.0"
sc-rpc-api = "0.41.0"
sc-service = "0.43.0"
sc-sysinfo = "35.0.0"
sc-telemetry = "22.0.0"
sc-tracing = "35.0.0"
sc-transaction-pool = "35.0.0"
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, version = "33.0.0" }
sp-arithmetic = { default-features = false, version = "26.0.0" }
sp-block-builder = { default-features = false, version = "33.0.0" }
sp-blockchain = "35.1.0"
sp-consensus-aura = { default-features = false, version = "0.39.0" }
sp-core = { default-features = false, version = "34.0.0" }
sp-externalities = "0.29.0"
sp-genesis-builder = { default-features = false, version = "0.14.0" }
sp-inherents = { default-features = false, version = "33.0.0" }
sp-io = { default-features = false, version = "37.0.0" }
sp-keystore = "0.40.0"
sp-offchain = { default-features = false, version = "33.0.0" }
sp-runtime = { default-features = false, version = "38.0.0" }
sp-session = { default-features = false, version = "34.0.0" }
sp-staking = { default-features = false, version = "33.0.0" }
sp-state-machine = "0.42.0"
sp-std = { default-features = false, version = "14.0.0" }
sp-storage = { default-features = false, version = "21.0.0" }
sp-timestamp = "33.0.0"
sp-tracing = "17.0.0"
sp-transaction-pool = { default-features = false, version = "33.0.0" }
sp-trie = { default-features = false, version = "36.0.0" }
sp-version = { default-features = false, version = "36.0.0" }
sp-weights = { default-features = false, version = "31.0.0" }
staging-parachain-info = { default-features = false, version = "0.15.0" }
staging-xcm = { default-features = false, version = "14.0.1" }
staging-xcm-builder = { default-features = false, version = "15.0.0" }
staging-xcm-executor = { default-features = false, version = "15.0.0" }
substrate-frame-rpc-system = "36.0.0"
substrate-prometheus-endpoint = "0.17.0"

# Parity: Build utils
substrate-build-script-utils = "11.0.0"
substrate-wasm-builder = "23.0.0"

# Parity: Benchmarking
frame-benchmarking = { default-features = false, version = "36.0.0" }
frame-benchmarking-cli = "40.0.0"
frame-system-benchmarking = { default-features = false, version = "36.0.0" }

# Parity: Try Runtime
frame-try-runtime = { default-features = false, version = "0.42.0" }
try-runtime-cli = "0.41.0"

# Other
derivative = { version = "2.2.0", features = ["use_core"] }
ethereum = { version = "0.15.0", default-features = false, features = ["with-codec"] }
evm-core = { version = "0.41.0", default-features = false }
hex-literal = "0.4.1"
impl-trait-for-tuples = "0.2.2"
jsonrpsee = { version = "0.23.2", features = ["macros", "server"] }
log = { version = "0.4.20", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
serde = { default-features = false, features = ['derive'], version = "1.0.188" }
smallvec = "1.11.1"

[workspace.metadata.deppatcher.originals.workspace.dependencies]
cumulus-client-parachain-inherent = { version = "0.4.0" }
cumulus-pallet-aura-ext = { version = "0.10.0" }
cumulus-pallet-dmp-queue = { version = "0.10.0" }
cumulus-pallet-parachain-system = { version = "0.10.0" }
cumulus-pallet-xcm = { version = "0.10.0" }
cumulus-pallet-xcmp-queue = { version = "0.10.0" }
cumulus-primitives-aura = { version = "0.10.0" }
cumulus-primitives-core = { version = "0.10.0" }
cumulus-primitives-timestamp = { version = "0.10.0" }
cumulus-primitives-utility = { version = "0.10.0" }
frame-executive = { version = "31.0.0" }
frame-support = { version = "31.0.0" }
frame-system = { version = "31.0.0" }
frame-system-rpc-runtime-api = { version = "29.0.0" }
pallet-aura = { version = "30.0.0" }
pallet-authorship = { version = "31.0.0" }
pallet-balances = { version = "31.0.0" }
pallet-collective = { version = "31.0.0" }
pallet-democracy = { version = "31.0.0" }
pallet-membership = { version = "31.0.0" }
pallet-message-queue = { version = "34.0.0" }
pallet-preimage = { version = "31.0.0" }
pallet-ranked-collective = { version = "31.0.0" }
pallet-referenda = { version = "31.0.0" }
pallet-session = { version = "31.0.0" }
pallet-sudo = { version = "31.0.0" }
pallet-timestamp = { version = "30.0.0" }
pallet-transaction-payment = { version = "31.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "31.0.0" }
pallet-treasury = { version = "30.0.0" }
pallet-utility = { version = "31.0.0" }
pallet-xcm = { version = "10.0.1" }
polkadot-parachain-primitives = { version = "9.0.0" }
polkadot-runtime-common = { version = "10.0.0" }
sp-api = { version = "29.0.0" }
sp-arithmetic = { version = "25.0.0" }
sp-block-builder = { version = "29.0.0" }
sp-consensus-aura = { version = "0.35.0" }
sp-core = { version = "31.0.0" }
sp-genesis-builder = { version = "0.10.0" }
sp-inherents = { version = "29.0.0" }
sp-io = { version = "33.0.0" }
sp-offchain = { version = "29.0.0" }
sp-runtime = { version = "34.0.0" }
sp-session = { version = "30.0.0" }
sp-staking = { version = "29.0.0" }
sp-storage = { version = "20.0.0" }
sp-transaction-pool = { version = "29.0.0" }
sp-trie = { version = "32.0.0" }
sp-version = { version = "32.0.0" }
sp-weights = { version = "30.0.0" }
staging-parachain-info = { version = "0.10.0" }
staging-xcm = { version = "10.0.0" }
staging-xcm-builder = { version = "10.0.0" }
staging-xcm-executor = { version = "10.0.0" }
frame-benchmarking = { version = "31.0.0" }
frame-system-benchmarking = { version = "31.0.0" }
frame-try-runtime = { version = "0.37.0" }
cumulus-client-cli = { version = "0.10.0" }
cumulus-client-collator = { version = "0.10.0" }
cumulus-client-consensus-aura = { version = "0.10.0" }
cumulus-client-consensus-common = { version = "0.10.0" }
cumulus-client-consensus-proposer = { version = "0.10.0" }
cumulus-client-network = { version = "0.10.0" }
cumulus-client-service = { version = "0.10.0" }
cumulus-relay-chain-inprocess-interface = { version = "0.10.0" }
cumulus-relay-chain-interface = { version = "0.10.0" }
cumulus-relay-chain-minimal-node = { version = "0.10.0" }
cumulus-test-relay-sproof-builder = { version = "0.10.0" }
pallet-transaction-payment-rpc = { version = "33.0.0" }
polkadot-cli = { version = "10.0.0" }
polkadot-primitives = { version = "10.0.0" }
polkadot-service = { version = "10.0.0" }
sc-basic-authorship = { version = "0.37.0" }
sc-chain-spec = { version = "30.0.0" }
sc-cli = { version = "0.39.0" }
sc-client-api = { version = "31.0.0" }
sc-consensus = { version = "0.36.0" }
sc-consensus-manual-seal = { version = "0.38.0" }
sc-executor = { version = "0.35.0" }
sc-network = { version = "0.37.0" }
sc-network-sync = { version = "0.36.0" }
sc-rpc = { version = "32.0.0" }
sc-rpc-api = { version = "0.36.0" }
sc-service = { version = "0.38.0" }
sc-sysinfo = { version = "30.0.0" }
sc-telemetry = { version = "17.0.0" }
sc-tracing = { version = "31.0.0" }
sc-transaction-pool = { version = "31.0.0" }
sp-blockchain = { version = "31.0.0" }
sp-externalities = { version = "0.27.0" }
sp-keystore = { version = "0.37.0" }
sp-state-machine = { version = "0.38.0" }
sp-timestamp = { version = "29.0.0" }
sp-tracing = { version = "16.0.0" }
substrate-frame-rpc-system = { version = "31.0.0" }
substrate-wasm-builder = { version = "20.0.0" }
frame-benchmarking-cli = { version = "35.0.0" }
