[package]
edition = "2021"
license = "GPLv3"
name = "pallet-evm-contract-helpers"
version = "0.3.0"

[dependencies]
scale-info = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }

# Unique
pallet-evm = { workspace = true }

# Locals
evm-coder = { workspace = true }
pallet-evm-coder-substrate = { workspace = true }
parity-scale-codec = { workspace = true }
up-data-structs = { workspace = true, features = ['serde1'] }

[features]
default = ["std"]
std = [
	"evm-coder/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm-coder-substrate/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-std/std",
]
stubgen = ["evm-coder/stubgen"]
try-runtime = ["frame-support/try-runtime"]
