[package]
edition = "2021"
license = "GPLv3"
name = "pallet-private-balances-aura-ext"
version = "0.1.0"

[dependencies]
# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }

sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-weights = { workspace = true }

pallet-aura = { workspace = true }

# Parity
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
	"pallet-aura/std",
	"parity-scale-codec/std",
	"scale-info/std",
]
try-runtime = ["frame-support/try-runtime"]