[package]
edition = "2021"
license = "GPLv3"
name = "pallet-trusted-authorities"
version = "0.1.0"

[dependencies]
# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Parity
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]