[package]
authors = ['ReDeFi Network <support@redefi.world>']
description = 'Redefi Runtime Common Primitives'
edition = '2021'
homepage = 'https://redefi.world'
license = 'All Rights Reserved'
name = 'up-common'
repository = 'https://github.com/ReDeFi-Blockchain/redefi-parachain'
version.workspace = true

[features]
default = ['std']
std = [
	'cumulus-primitives-core/std',
	'fp-rpc/std',
	'fp-self-contained/std',
	'frame-support/std',
	'pallet-evm/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
]

[dependencies]
cumulus-primitives-core = { workspace = true }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true }
frame-support = { workspace = true }
pallet-evm = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
