################################################################################
# Package

[package]
authors = ['ReDeFi Network <support@redefi.world>']
build = 'build.rs'
description = 'Redefi Parachain Runtime'
edition = '2021'
homepage = 'https://redefi.world'
license = 'GPLv3'
name = 'redefi-runtime'
repository = 'https://github.com/ReDeFi-Blockchain/redefi-parachain'
version.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['redefi-runtime', 'std']
redefi-runtime = []
runtime-benchmarks = [
	"pallet-preimage/runtime-benchmarks",
	'cumulus-pallet-parachain-system/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-ethereum/runtime-benchmarks',
	'pallet-evm-coder-substrate/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-xcm/runtime-benchmarks',
	'polkadot-runtime-common/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
	'staging-xcm-builder/runtime-benchmarks',
]
std = [
	"pallet-authorship/std",
	"pallet-evm-assets/std",
	"pallet-preimage/std",
	"pallet-session/std",
	"sp-consensus-aura/std",
	'cumulus-pallet-aura-ext/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-primitives-aura/std',
	'cumulus-primitives-core/std',
	'cumulus-primitives-utility/std',
	'evm-coder/std',
	'fp-rpc/std',
	'fp-self-contained/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'frame-try-runtime/std',
	'pallet-aura/std',
	'pallet-balances-adapter/std',
	'pallet-balances/std',
	'pallet-base-fee/std',
	'pallet-ethereum/std',
	'pallet-evm-coder-substrate/std',
	'pallet-evm-contract-helpers/std',
	'pallet-evm/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-treasury/std',
	'pallet-utility/std',
	'parity-scale-codec/std',
	'polkadot-runtime-common/std',
	'serde',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-core/std',
	'sp-genesis-builder/std',
	'sp-inherents/std',
	'sp-io/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-storage/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'staging-parachain-info/std',
	'staging-xcm-builder/std',
	'staging-xcm-executor/std',
	'staging-xcm/std',
	'up-common/std',
	'up-data-structs/std',
]
try-runtime = [
	"pallet-authorship/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-session/try-runtime",
	'cumulus-pallet-aura-ext/try-runtime',
	'cumulus-pallet-dmp-queue/try-runtime',
	'cumulus-pallet-parachain-system/try-runtime',
	'cumulus-pallet-xcm/try-runtime',
	'cumulus-pallet-xcmp-queue/try-runtime',
	'fp-self-contained/try-runtime',
	'frame-executive/try-runtime',
	'frame-support/try-runtime',
	'frame-system/try-runtime',
	'frame-try-runtime',
	'frame-try-runtime?/try-runtime',
	'pallet-aura/try-runtime',
	'pallet-balances/try-runtime',
	'pallet-base-fee/try-runtime',
	'pallet-ethereum/try-runtime',
	'pallet-evm-coder-substrate/try-runtime',
	'pallet-evm-contract-helpers/try-runtime',
	'pallet-evm/try-runtime',
	'pallet-sudo/try-runtime',
	'pallet-timestamp/try-runtime',
	'pallet-transaction-payment/try-runtime',
	'pallet-treasury/try-runtime',
	'pallet-utility/try-runtime',
	'pallet-xcm/try-runtime',
	'polkadot-runtime-common/try-runtime',
	'staging-parachain-info/try-runtime',
]

################################################################################
# local dependencies

[dependencies]
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-aura = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { features = ["insecure_zero_ed"], workspace = true }
pallet-preimage = { workspace = true }
pallet-session = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-utility = { workspace = true }
pallet-xcm = { workspace = true }
parity-scale-codec = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
smallvec = { workspace = true }
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
staging-parachain-info = { workspace = true }
staging-xcm = { workspace = true }
staging-xcm-builder = { workspace = true }
staging-xcm-executor = { workspace = true }

derivative = { workspace = true }
evm-coder = { workspace = true }
fp-evm = { workspace = true }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
pallet-balances-adapter = { workspace = true }
pallet-base-fee = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-assets = { workspace = true }
pallet-evm-coder-substrate = { workspace = true }
pallet-evm-contract-helpers = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
precompile-utils-macro = { workspace = true }
scale-info = { workspace = true }
up-common = { workspace = true }
up-data-structs = { workspace = true }

################################################################################
# Optional dependencies

frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

################################################################################
# Other Dependencies

hex-literal = { workspace = true }
impl-trait-for-tuples = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }
